Backport:

2004-11-25  Mark Mitchell  <mark@codesourcery.com>
	PR c++/18545
	* typeck.c (check_return_expr): Robustify.

	* g++.dg/expr/return1.C: New test.

From-SVN: r103732